# currencyexchange

./: .gitignore  Cargo.toml  README.md
.sqlx/: query-030c11b31bae61ceeb4e536b6c68d00c3f0cce487e42d31556edae7b938b8bc4.json  query-0559b4b3c0b37cf6123281a26a93ce3964e40b9f6008a3e1fd2b9d4fedc32940.json  query-0c9aec2f4716e1692de4d6d60e4293b7d447af3b4921a42a612f811c8fb350a1.json  query-1d111192d585c4c9bc6d83b4a51da0c540ee57b5f3a25795b97e59ef86e46595.json  query-3210474d94547c6824903aef0fd986a44467f114e101ef1e412f536ee727559c.json  query-41f018bf0546413784dd2456bafea97734dfb6a81e048f339476fbdff824ac5f.json  query-5b45c2ce6f4c1106f477044fc58be101aa22980370fd5e5101f69b47a5cfe7c2.json  query-606364c79e0990deb07dfbe6c32b3d302d083ec5333f3a5ce04113c38a041100.json  query-74043e8efaf9091582bc7baaa1f021c45c961cf31066cc5a59bee64250244e0a.json  query-7991bef59778dcddfca7e1047ec724ce5b6630be0fc135d05e427717a6ff34ed.json  query-816f76027c7b0c11598b682023a34270bc76cbe5355e13329ed098ba3fce6a88.json  query-84f41bb8b01adb2129399ea6f9337bba26ef504d8b6d0feb392693fe02a96e4c.json  query-a5c3cb5075163ed86e032f9f7f1b793b0f7d4113eba3cae2107d44fccc678364.json  query-aefc87d8c8354e32d095b6a0bbfdc70f9d918dc24a5cb62bcf84603bb94da219.json  query-de5fa02cc188a4e39cd758211b28d4a60cc7b43d6d23fe739a3a2889adc8e392.json  query-ef835875af58dbce2ff8775e6e7eecee409221f85b5f90025c966511bf76b33b.json
currency-exchange-admin/: Cargo.toml
currency-exchange-admin/src/: get_handlers.rs  lib.rs  main.rs  post_handlers.rs  server.rs
currency-exchange-admin/tests/: endpoints_tests.rs
currency-exchange-auth/: Cargo.toml
currency-exchange-auth/migrations/: 003_create_wallet_up.sql
currency-exchange-auth/src/: env_parser.rs  jwt.rs  lib.rs  main.rs  middleware.rs  model_mapper.rs  post_handlers.rs  server.rs  tracing_middleware.rs
currency-exchange-auth/src/datasource/: api_models.rs
currency-exchange-auth/src/datasource/repository/: mod.rs  repository.rs
currency-exchange-auth/tests/: endpoints_test.rs
currency-exchange-client/: Cargo.toml
currency-exchange-client/src/: client.rs  client_env_parser.rs  lib.rs  main.rs
currency-exchange-data/: Cargo.toml
currency-exchange-data/src/datasource/: api_models.rs  error_responses.rs  errors.rs  mod.rs  models.rs  responses.rs
currency-exchange-data/src/datasource/repository/: currency_amount_repository.rs  currency_repository.rs  mod.rs  order_repository.rs  repository.rs  user_repository.rs  wallet_repository.rs
currency-exchange-middleware/: Cargo.toml
currency-exchange-middleware/src/: database_connector.rs  env_parser.rs  jwt.rs  lib.rs  middleware.rs
currency-exchange-orders/: Cargo.toml
currency-exchange-orders/src/: errors.rs  get_handlers.rs  lib.rs  main.rs  models.rs  order_endpoints.rs  order_transaction_manager.rs  post_handlers.rs  put_handlers.rs  server.rs
currency-exchange-swagger/: Cargo.toml
currency-exchange-swagger/src/: lib.rs  main.rs  swagger.rs  swagger_env.rs
currency-exchange-user/: Cargo.toml
currency-exchange-user/src/: lib.rs  main.rs  post_handlers.rs  server.rs
currency-exchange-user/tests/: endpoints_tests.rs
migrations/: 001_create_currencies_up.sql  002_create_users_up.sql  004_create_buy_order_up.sql  005_create_sell_order_up.sql  006_create_exchange.sql  007_create_currency_amount.sql  008_alter_wallets.sql  009_alter_currencies_code_unique.sql  010_alter_currency_amount.sql  011_altter_buy_order_drop_exchange_rate.sql  012_alter_buy_order_uniques.sql  013_alter_sell_order_uniques.sql  014_alter_sell_order_drop_exchangerate.sql  015_alter_users_varying.sql  016_alter_users_varying_two.sql
src/: lib.rs  main.rs  server.rs
src/api/: middleware.rs  mod.rs  post_handlers.rs
src/auth/: auth_server_env_parser.rs  endpoints.rs  jwt_secret_env_parser.rs  main.rs  mod.rs
src/datasource/: api_models.rs  mod.rs  models.rs  repository.rs  user_repository.rs
src/migrationmanager/: env_parser.rs  migration_manager.rs  mod.rs
src/utils/: env_parser.rs  errors.rs  jwt.rs  mod.rs
tests/: endpoints_test.rs
