[package]
name = "CurrencyExchange"
version = "0.1.0"
edition = "2024"

[dependencies]
utoipa = { version = "5.4.0", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
axum = "0.8.6"
sqlx = { version = "0.8.0", features = ["runtime-tokio", "tls-rustls", "postgres", "sqlx-postgres"] }
tokio = { version = "1.39.3", features = ["full"] }
serde = { version = "1.0.204", features = ["derive"] }
clap = { version = "4.5.13", features = ["derive"] }
serde_json = "1.0.122"
log = "0.4.28"
env_logger = "0.11.8"
tracing-subscriber = "0.3.20"
tracing = "0.1.41"
dotenvy = "0.15.7"
thiserror = "2.0.17"
anyhow = "1.0.100"