[package]
name = "currency-exchange-auth"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.11.0"
actix-jwt-auth-middleware = "0.5.0"
jsonwebtoken = { version = "10.0.0", features = ["rust_crypto"] }
dotenvy = "0.15.7"
serde = { version = "1.0.228", features = ["derive"] }
time = { version = "0.3.44", features = ["serde", "serde-human-readable"] }
sqlx = { version = "0.8.6", features = ["time", "postgres", "sqlx-postgres", "tls-rustls", "runtime-tokio"] }
serde_with = "3.15.0"
thiserror = "2.0.17"
async-trait = "0.1.89"
tracing = "0.1.41"
tracing-actix-web = "0.7.19"
env_logger = "0.11.8"

[dev-dependencies]
fake = { version = "4.4.0", features = ["derive"] }

[[bin]]
name = "authserver"
path = "src/main.rs"