[package]
name = "currency-exchange-client"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.51", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
reqwest = { version = "0.12.24", features = ["json"] }
tokio = { version = "1.48.0", features = ["full"] }
dotenvy = "0.15.7"
rust-argon2 = "3.0"
rand = "0.8.5"
rand_distr = "0.4"
currency-exchange-data = {version = "0.1.0", path = "../currency-exchange-data"}
[[bin]]
name = "client"
path = "src/main.rs"