[package]
name = "currency-exchange-orders"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.11.0"
serde = { version = "1.0.228", features = ["derive"] }
uuid = { version = "1.18.1", features = ["v4", "serde"] }
time = { version = "0.3.44", features = ["serde", "serde-human-readable"] }
sqlx = { version = "0.8.6", features = ["time", "postgres", "sqlx-postgres", "tls-rustls", "runtime-tokio"] }
serde_with = "3.15.0"
dotenvy = "0.15.7"
env_logger = "0.11.8"
currency-exchange-middleware = { version = "0.1.0", path = "../currency-exchange-middleware"}
tracing = "0.1.41"

[[bin]]
name = "bidder"
path = "src/main.rs"
